<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     android:background="@drawable/background1" >  
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >  
    
    <TextView 
        android:id="@+id/tv1" 
        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/searchyourflat"
         
         android:textStyle="bold"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         android:layout_marginTop="20dip"/>
    <EditText android:id="@+id/flat" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="textCapSentences"
         android:digits="0,1,2,3,4,5,6,7,8,9,-,.,,,(,),:,/,_,\,!,'qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNNM " 
         android:hint="@string/enteraddress"
         android:layout_margin="10dip"
         android:layout_marginBottom="20dip"/>
    <Button
        android:id="@+id/searchflat"
        android:text="@string/search"
       android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:textStyle="bold" 
        android:background="@drawable/button_custom"
         android:textColor="@drawable/button_text_color" />
    
    <TextView android:id="@+id/admin"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         android:layout_marginTop="20dip"
         android:visibility="gone"/>
     
     <TextView 
         android:id="@+id/tv2" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/appartment"
         android:textStyle="bold"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         android:layout_marginTop="20dip"/>
     
     <EditText android:id="@+id/txtName" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hintappartment"
         android:digits="0,1,2,3,4,5,6,7,8,9,-,.,,,(,),:,/,_,\,!qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNNM " 
         android:inputType="textCapWords"
         android:maxLength="11"
         android:layout_margin="10dip"
         android:layout_marginBottom="20dip"/>
     <TextView 
         android:id="@+id/tv3" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Pin:"
         
         android:textStyle="bold"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         android:layout_marginTop="20dip"/>
     
     <EditText android:id="@+id/pin" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:hint="@string/pinhint"
         android:maxLength="4"
         android:layout_margin="10dip"
         android:layout_marginBottom="20dip"/>
     
     <TextView android:id="@+id/tv4" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/username"
         android:textStyle="bold"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"/>
     
     <EditText android:id="@+id/txtEmail" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="textCapWords"
         android:digits="0,1,2,3,4,5,6,7,8,9,-,.,_,@,qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNNM " 
         android:maxLength="25"
         android:layout_margin="10dip"
         android:layout_marginBottom="20dip"/>
     <TextView 
         android:id="@+id/tv5" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/password"
         android:textStyle="bold"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         android:layout_marginTop="20dip"/>
     
     <EditText android:id="@+id/registerPassword" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:digits="0,1,2,3,4,5,6,7,8,9,qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNNM " 
         android:layout_margin="10dip"
         android:layout_marginBottom="20dip"/>
     <Button
        android:id="@+id/btnRegister"
        android:text="@string/registerbtn"
       android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:textStyle="bold" 
        android:background="@drawable/button_red"
         android:textColor="@drawable/button_text_color" />
     
 
     <!--
     <Button android:id="@+id/login"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Login"
         android:layout_margin="10dip"/>
     -->
     <Button
        android:id="@+id/registeradmin"
        android:text="@string/registeradmin"
       android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:textStyle="bold" 
        android:background="@drawable/button_green"
         android:textColor="@drawable/button_text_color" />
     
     <!--  Error message -->
        <TextView android:id="@+id/register_error"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:textColor="#e30000"
            		android:padding="10dip"
            		android:textStyle="bold"/>
     </LinearLayout>
     </ScrollView>

</LinearLayout>